--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
             
     <!--
       manifest.json provides metadata used when your web app is installed on a
